--- a/README
+++ b/README
@@ -6,7 +6,7 @@ All it really does is say 'Hello World' for now.
 
 Its pretty easy to understand, you create a class that implements the BBWeeAppController protocol. The only required function you must have is '- (UIView *)view' in which you must return the view that you want to appear. There are also other methods in the protocol for launching URLs when tapped and for rotation detection, view height, etc.
 
-I don't yet know how to set the name in the Settings.app but it seems that the icon shown is set by setting the app identifier in Info.plist of the app which icon you want. (e.g. to get your custom widget to have the Safari icon set the 'AppBundleID' in Info.plist to 'com.apple.mobilesafari')
+The i is set by settings the 'AppBundleID' key in the Info.plist file to an app id. The icon will then be the icon for that app (e.g. Setting 'AppBundleID' to 'com.apple.mobilesafari' will make your widget have the Safari icon). The name is set in the 'InfoPlist.strings' file (Thanks @timwachter)
 
 Custom bundles are placed in /System/Library/WeeAppPlugins/
 
